// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user list nav bar (with invite link) Basic render test 1`] = `
<div
  className="site-admin-user-list-nav-bar"
>
  <div
    className="site-admin-card"
  >
    <div
      className="site-admin-tabs-container"
    >
      <ul
        className="unadorned-list site-admin-tabs"
      >
        <li>
          <div
            className="nti-link-to-path"
            exact={true}
            to="./"
          >
            Users
          </div>
        </li>
        <li>
          <div
            className="nti-link-to-path"
            to="./admins"
          >
            Site Admins
          </div>
        </li>
        <li>
          <div
            className="nti-link-to-path"
            to="./course-admins"
          >
            Course Admins
          </div>
        </li>
        <li>
          <div
            className="nti-link-to-path"
            to="./deactivated"
          >
            Deactivated
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="site-admin-card"
  >
    <div
      className="invite"
      onClick={[Function]}
    >
      <i
        className="icon-addfriend"
      />
      Invite People
    </div>
    <div
      className="site-admin-tabs-container"
    >
      <ul
        className="unadorned-list site-admin-tabs"
      >
        <li>
          <div
            className="nti-link-to-path"
            to="./invitations"
          >
            Invitations
            <div
              className="invitations-count"
              data-reach-tooltip-trigger=""
              data-state="tooltip-hidden"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              onPointerMove={[Function]}
            >
              5
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Site admin user list nav bar (without invite link) Basic render test 1`] = `
<div
  className="site-admin-user-list-nav-bar"
>
  <div
    className="site-admin-card"
  >
    <div
      className="site-admin-tabs-container"
    >
      <ul
        className="unadorned-list site-admin-tabs"
      >
        <li>
          <div
            className="nti-link-to-path"
            exact={true}
            to="./"
          >
            Users
          </div>
        </li>
        <li>
          <div
            className="nti-link-to-path"
            to="./admins"
          >
            Site Admins
          </div>
        </li>
        <li>
          <div
            className="nti-link-to-path"
            to="./course-admins"
          >
            Course Admins
          </div>
        </li>
        <li>
          <div
            className="nti-link-to-path"
            to="./deactivated"
          >
            Deactivated
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="site-admin-card"
  >
    <div
      className="site-admin-tabs-container"
    >
      <ul
        className="unadorned-list site-admin-tabs"
      >
        <li>
          <div
            className="nti-link-to-path"
            to="./invitations"
          >
            Invitations
            <div
              className="invitations-count"
              data-reach-tooltip-trigger=""
              data-state="tooltip-hidden"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              onPointerMove={[Function]}
            >
              5
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
